fix: add text area overflow, to show more text

--- a/src/components/CardModal/CardModal.scss
+++ b/src/components/CardModal/CardModal.scss
@@ -42,6 +42,5 @@
   font-size: 16px;
   line-height: inherit;
   resize: none;
-  overflow: hidden;
   outline: none;
 }
